# pytouch-bt-darwin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ptouch_bt/: __init__.py  cli.py  devices.py  printer.py  protocol.py  rasterize.py  status.py
src/ptouch_bt/transport/: __init__.py  iobluetooth.py  serialport.py
tests/: test_iobluetooth_transport.py  test_printer.py  test_protocol.py  test_rasterize.py  test_status.py
